--- a/project0/index.html
+++ b/project0/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     </head>
     <body>
-        <div class="row">Hello, world!</div>
+        <div class="row">
+        	<div class="col-sm-12"><h1>Hello, world!</h1></div>
+    </div>
     </body>
 </html> 
