--- a/project0/index.html
+++ b/project0/index.html
@@ -7,7 +7,13 @@
     </head>
     <body>
         <div class="row">
-        	<div class="col-sm-12"><h1>Hello, world Baby!</h1></div>
+        	<header class=sticky-top>
+        		<div class="row flex-nonwrap bg-dark">
+        			<div class="col-12 text-center">
+        				<h1 class="text-gray" =>Project 0</h1>
+        			</div>
+        		</div>
+        	</header>
     </div>
     </body>
 </html> 
