--- a/project0/index.html
+++ b/project0/index.html
@@ -6,14 +6,14 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     </head>
     <body>
-        <div class="row">
+    	<div class="container-fluid">
         	<header class=sticky-top>
-        		<div class="row flex-nonwrap bg-dark">
-        			<div class="col-12 text-center">
-        				<h1 class="text-gray" =>Project 0</h1>
+        		<div class="row justify-content-between align-items-center bg-dark">
+        			<div class="col-sm-12 text-center">
+        				<h1 class="text-white">Project 0</h1>
         			</div>
         		</div>
         	</header>
-    </div>
+        </div>
     </body>
 </html> 
