--- a/project0/index.html
+++ b/project0/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Webpage</title>
+    	<meta charset="utf-8">
         <meta name="viewport" content="width=devive-width, intial-scale=1">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+     	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <title>Project 0</title>
     </head>
     <body>
-    	<div class="container-fluid">
-        	<header class=sticky-top>
-        		<div class="row justify-content-between align-items-center bg-dark">
-        			<div class="col-sm-12 text-center">
-        				<h1 class="text-white">Project 0</h1>
-        			</div>
-        		</div>
-        	</header>
-        </div>
+    	<!--Bootstrap nav-->
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+		  <a class="navbar-brand" href="#">Project 0</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		    <div class="navbar-nav">
+		      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+		      <a class="nav-item nav-link" href="#">About me</a>
+		      <a class="nav-item nav-link" href="#">Resume</a>
+		      <a class="nav-item nav-link" href="#">Gaming</a>
+		    </div>
+		  </div>
+		</nav>
+		<div class="container-fluid">
+			<div class="row" style="height:500px;">
+				<div class="col-12 bg-light">
+					<h1 class=" display-1 text-center" style="margin-top:20%;">Joy of Learning</h1>
+					<p class="text-center">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>
+				</div>
+			</div>
+		</div>
+
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html> 
