--- a/project0/index.html
+++ b/project0/index.html
@@ -23,15 +23,27 @@
 		    </div>
 		  </div>
 		</nav>
+
+		<div class="jumbotron jumbotron-fluid jumbotron-main jumb" id="jumbotron-1">
+  			<div class="container text-center vertical-center">
+
+    		<h1 class="display-1">Joy of Learning</h1>
+    		<p class="lead">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>
+  			</div>
+		</div>
+
+<!--
 		<div class="container-fluid">
-			<div class="row" style="height:500px;">
-				<div class="col-12 bg-light">
-					<h1 class=" display-1 text-center" style="margin-top:20%;">Joy of Learning</h1>
+			<div class="row">
+				<div class="col-12 bg-light" style="height:500px;">
+					<h1 class=" display-1 text-center">Joy of Learning</h1>
 					<p class="text-center">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>
+				</div>
+				<div class="col-12 bg-dark" style="height:500px;">
 				</div>
 			</div>
 		</div>
-
+-->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
