finished second jumbotron

--- a/project0/index.html
+++ b/project0/index.html
@@ -24,11 +24,24 @@
 		  </div>
 		</nav>
 
-		<div class="jumbotron jumbotron-fluid jumbotron-main jumb" id="jumbotron-1">
+		<div class="jumbotron jumbotron-fluid jumbotron-main jumb mb-0" id="jumbotron-1">
   			<div class="container text-center vertical-center">
 
     		<h1 class="display-1">Joy of Learning</h1>
-    		<p class="lead">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>
+    		<p class="lead mt-4">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>
+  			</div>
+		</div>
+
+		<div class="jumbotron jumbotron-fluid jumbotron-main jumb bg-dark mb-0" id="jumbotron-1">
+  			<div class="container text-center vertical-center">
+    			<h1 class="display-1" style="color:white;">Harvard Certificate</h1>
+    			<ul class="d-inline-block text-left mt-4"style="color:white;">
+    				<li>Certificate purchases help edX continue to offer free courses</li>
+    				<li>Proven motivator to complete the course</li>
+    				<li>Official proof of completion</li>
+    				<li>Easily shareable certificate</li>
+    			</ul>
+    		<!--<p class="lead" style="color:white;">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>-->
   			</div>
 		</div>
 
