made navbar sticky

--- a/project0/index.html
+++ b/project0/index.html
@@ -10,7 +10,7 @@
     <body>
 
     	<!--Bootstrap nav-->
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+		<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark p-3">
 		  <a class="navbar-brand" href="#">Project 0</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
