--- a/project0/index.html
+++ b/project0/index.html
@@ -11,16 +11,16 @@
 
     	<!--Bootstrap nav-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark p-3">
-		  <a class="navbar-brand" href="#">Project 0</a>
+		  <a class="navbar-brand" href="index.html">Project 0</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
 		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		    <div class="navbar-nav">
 		      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-		      <a class="nav-item nav-link" href="#">About me</a>
-		      <a class="nav-item nav-link" href="#">Resume</a>
-		      <a class="nav-item nav-link" href="#">Gaming</a>
+		      <a class="nav-item nav-link" href="About.html">About me</a>
+		      <a class="nav-item nav-link" href="resume.html">Resume</a>
+		      <a class="nav-item nav-link" href="gaming.html">Gaming</a>
 		    </div>
 		  </div>
 		</nav>
@@ -32,6 +32,8 @@
     		<p class="lead mt-4">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>
   			</div>
 		</div>
+
+		<img class="img-fluid" src="images/cherries.png" alt="cherries">
 
 		<div class="jumbotron jumbotron-fluid jumbotron-main jumb bg-dark mb-0" id="jumbotron-1">
   			<div class="container text-center vertical-center">
