--- a/project0/index.html
+++ b/project0/index.html
@@ -33,7 +33,7 @@
   			</div>
 		</div>
 
-		<img class="img-fluid" src="images/cherries.png" alt="cherries">
+		<img class="img-fluid" src="images/cherries.jpg" alt="cherries">
 
 		<div class="jumbotron jumbotron-fluid jumbotron-main jumb bg-dark mb-0" id="jumbotron-1">
   			<div class="container text-center vertical-center">
