--- a/project0/index.html
+++ b/project0/index.html
@@ -27,7 +27,6 @@
 
 		<div class="jumbotron jumbotron-fluid jumbotron-main jumb mb-0" id="jumbotron-1">
   			<div class="container text-center vertical-center">
-
     		<h1 class="display-1">Joy of Learning</h1>
     		<p class="lead mt-4">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>
   			</div>
@@ -44,9 +43,17 @@
     				<li>Official proof of completion</li>
     				<li>Easily shareable certificate</li>
     			</ul>
-    		<!--<p class="lead" style="color:white;">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>-->
   			</div>
 		</div>
+
+		<div class="jumbotron jumbotron-fluid jumbotron-main jumb mb-0 bg-white" id="jumbotron-1">
+  			<div class="container text-center vertical-center">
+    		<h1 class="display-1">Joy of Learning</h1>
+    		<p class="lead mt-4">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>
+  			</div>
+		</div>
+
+		<img class="img-fluid" src="images/sky.jpg" alt="cherries">
 
 <!--
 		<div class="container-fluid">
