--- a/project0/index.html
+++ b/project0/index.html
@@ -46,6 +46,8 @@
   			</div>
 		</div>
 
+		<img class="img-fluid" src="images/sky.jpg" alt="sunset">
+
 		<div class="jumbotron jumbotron-fluid jumbotron-main jumb mb-0 bg-white" id="jumbotron-1">
   			<div class="container text-center vertical-center">
     		<h1 class="display-1">Joy of Learning</h1>
@@ -53,7 +55,6 @@
   			</div>
 		</div>
 
-		<img class="img-fluid" src="images/sky.jpg" alt="cherries">
 
 <!--
 		<div class="container-fluid">
