changed nav font size

--- a/project0/index.html
+++ b/project0/index.html
@@ -11,7 +11,7 @@
 
     	<!--Bootstrap nav-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark p-3">
-		  <a class="navbar-brand font-weight-bold" href="index.html">Project 0</a>
+		  <a class=" navbar-brand font-weight-bold navtext" style="font-size: 2rem" href="index.html">Project 0</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -50,8 +50,8 @@
 
 		<div class="jumbotron jumbotron-fluid jumbotron-main jumb mb-0 bg-white" id="jumbotron-1">
   			<div class="container text-center vertical-center">
-    		<h1 class="display-1">Joy of Learning</h1>
-    		<p class="lead mt-4">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>
+    		<h1 class="display-1">Project Based Learning</h1>
+    		<p class="lead mt-4">Project based learning gives you the ability to learning real world problem solving abilities on top of what you are learning from the lectures.</p>
   			</div>
 		</div>
 
