updated about page

--- a/about.html
+++ b/about.html
@@ -11,8 +11,10 @@
     <title>About me</title>
   </head>
   <body>
+
+    <!--nav menu -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark p-3">
-      <a class="navbar-brand" href="index.html">Project 0</a>
+      <a class="navbar-brand font-weight-bold" href="index.html">Project 0</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,6 +27,15 @@
         </div>
       </div>
     </nav>
+
+    <div class="jumbotron jumbotron-fluid jumbotron-main jumb mb-0" id="jumbotron-1">
+        <div class="container text-center vertical-center">
+          <img src="images/dun.jpg" alt="selfportrait" class="img-thumbnail w-75">
+        <!--<h1 class="display-1">Joy of Learning</h1>-->
+        <p class="lead mt-4">Hey i am Ansel. The GUY in the picture lol. I am a aspiring software engineer currently completing the CS50 course Web development with Python and Javascript.
+        My goal is to gain a proficient understanding of contemporary industry standards of web development. </p>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
