--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		    <div class="navbar-nav">
 		      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-		      <a class="nav-item nav-link" href="About.html">About me</a>
+		      <a class="nav-item nav-link" href="about.html">About me</a>
 		      <a class="nav-item nav-link" href="resume.html">Resume</a>
 		      <a class="nav-item nav-link" href="gaming.html">Gaming</a>
 		    </div>
