--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
     	<!--Bootstrap nav-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark p-3">
-		  <a class=" navbar-brand font-weight-bold navtext" style="font-size: 2rem" href="index.html">Project 0</a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-		    <div class="navbar-nav">
-		      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-		      <a class="nav-item nav-link" href="about.html">About me</a>
-		      <a class="nav-item nav-link" href="resume.html">Resume</a>
-		      <a class="nav-item nav-link" href="gaming.html">Gaming</a>
-		    </div>
-		  </div>
-		</nav>
+      <a class="navbar-brand" href="index.html">Project 0</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="about.html">About me</a>
+          <a class="nav-item nav-link" href="resume.html">Resume</a>
+          <a class="nav-item nav-link" href="gaming.html">Gaming</a>
+        </div>
+      </div>
+    </nav>
 
 		<div class="jumbotron jumbotron-fluid jumbotron-main jumb mb-0" id="jumbotron-1">
   			<div class="container text-center vertical-center">
