--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=devive-width, intial-scale=1">
-        <meta charset="utf-8">
-     	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <!-- Required meta tags -->
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	    <!-- Bootstrap CSS -->
+	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <title>Project 0</title>
     </head>
@@ -11,19 +14,19 @@
 
     	<!--Bootstrap nav-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark p-3">
-      <a class="navbar-brand" href="index.html">Project 0</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="about.html">About me</a>
-          <a class="nav-item nav-link" href="resume.html">Resume</a>
-          <a class="nav-item nav-link" href="gaming.html">Gaming</a>
-        </div>
-      </div>
-    </nav>
+		  <a class=" navbar-brand font-weight-bold navtext" href="index.html">Project 0</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		    <div class="navbar-nav">
+		      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+		      <a class="nav-item nav-link" href="bout.html">About me</a>
+		      <a class="nav-item nav-link" href="resume.html">Resume</a>
+		      <a class="nav-item nav-link" href="gaming.html">Gaming</a>
+		    </div>
+		  </div>
+		</nav>
 
 		<div class="jumbotron jumbotron-fluid jumbotron-main jumb mb-0" id="jumbotron-1">
   			<div class="container text-center vertical-center">
