--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
         <div class="container text-center vertical-center">
           <img src="images/dun.JPG" alt="selfportrait" class="img-thumbnail w-75">
         <!--<h1 class="display-1">Joy of Learning</h1>-->
-        <p class="lead mt-4">Hey i am Ansel. The GUY in the picture lol. I am a aspiring software engineer currently completing the CS50 course Web development with Python and Javascript.
-        My goal is to gain a proficient understanding of contemporary industry standards of web development. </p>
+        <p class="lead mt-4">Hey i am Ansel. The GUY in the picture lol. I am a aspiring software engineer currently completing the CS50 course, Web development with Python and Javascript.
+        My goal is to gain a proficient understanding of contemporary web development industry standards. </p>
         </div>
     </div>
 
