--- a/gaming.html
+++ b/gaming.html
@@ -25,6 +25,27 @@
         </div>
       </div>
     </nav>
+    <div class="container-fluid">
+      <div class="row">
+        <table class="table table-dark">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Game</th>
+              <th scope="col">Category</th>
+              <th scope="col">Skill Level</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              
+            </tr>
+          </tbody>  
+        </table>
+      </div>
+    </div> 
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
