--- a/gaming.html
+++ b/gaming.html
@@ -25,23 +25,47 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
-        <table class="table table-dark">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Game</th>
-              <th scope="col">Category</th>
-              <th scope="col">Skill Level</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              
-            </tr>
-          </tbody>  
-        </table>
+        <div class="col">
+          <h3 class="display-4 text-center m-3">Games I Play</h3>
+          <table class="table table-dark">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Game</th>
+                <th scope="col">Category</th>
+                <th scope="col">Skill Level</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Fortnite</td> 
+                <td>Tps</td>
+                <td>Semi-Pro</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>COD</td>
+                <td>Fps</td>
+                <td>Semi-Pro</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Apex Legends</td>
+                <td>Fps</td>
+                <td>Semi-Pro</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Minecraft</td>
+                <td>Adventure</td>
+                <td>Nube</td>
+              </tr>
+            </tbody>  
+          </table>
+        </div>
       </div>
     </div> 
 
