--- a/gaming.html
+++ b/gaming.html
@@ -12,16 +12,16 @@
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark p-3">
-      <a class="navbar-brand" href="index.html">Project 0</a>
+      <a class="navbar-brand font-weight-bold" href="index.html">Project 0</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="about.html">About me</a>
           <a class="nav-item nav-link" href="resume.html">Resume</a>
-          <a class="nav-item nav-link" href="gaming.html">Gaming</a>
+          <a class="nav-item nav-link active" href="gaming.html">Gaming</a>
         </div>
       </div>
     </nav>
@@ -65,6 +65,13 @@
               </tr>
             </tbody>  
           </table>
+        </div>
+      </div>
+      <div class="row">
+        <div class="embed-responsive embed-responsive-16by9">
+          <video width="640" height="480" controls>
+          <source src="images/clip.mp4" type="video/mp4">
+          <source src="movie.ogg" type="video/ogg">
         </div>
       </div>
     </div> 
