--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 	    <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	    <!--my css-->
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+
         <title>Project 0</title>
     </head>
     <body>
@@ -30,7 +32,7 @@
 
 		<div class="jumbotron jumbotron-fluid jumbotron-main jumb mb-0" id="jumbotron-1">
   			<div class="container text-center vertical-center">
-    		<h1 class="display-1">Joy of Learning</h1>
+    		<h1 class="display-2">Joy of Learning</h1>
     		<p class="lead mt-4">The joy of learning is one that never stops. Coming across this CS50 course was a pivotal moment in my career as a Web developer.</p>
   			</div>
 		</div>
@@ -53,7 +55,7 @@
 
 		<div class="jumbotron jumbotron-fluid jumbotron-main jumb mb-0 bg-white" id="jumbotron-1">
   			<div class="container text-center vertical-center">
-    		<h1 class="display-1">Project Based Learning</h1>
+    		<h1 class="display-2">Project Based Learning</h1>
     		<p class="lead mt-4">Project based learning gives you the ability to learning real world problem solving abilities on top of what you are learning from the lectures.</p>
   			</div>
 		</div>
