--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <title>Resume</title>
@@ -85,7 +86,7 @@
         <div>
             <a href="mailto:email@example.com">Ansel.Shelly@gmail.com</a>
             |
-            <a href="www.anselshelly.com" target="> anselshelly.com"> AnselShelly.com</a>
+            <a href="https://www.anselshelly.com" target="> anselshelly.com"> AnselShelly.com</a>
             <!--<a href="#" target="_blank">Twitter</a>
             <a href="#" target="_blank">LinkedIn</a>
             <a href="#" target="_blank">Facebook</a>-->
