--- a/resume.html
+++ b/resume.html
@@ -80,11 +80,11 @@
     
     <!-- // Footer & contact info -->
     <footer>
-        <h2>Let's Keep in Touch!</h2>
+        <h2 id="diff">Let's Keep in Touch!</h2>
         
         <!-- Social media and contact links. Add or remove any networks. -->
         <div>
-            <a href="mailto:email@example.com">Ansel.Shelly@gmail.com</a>
+            <a href="mailto:email@example.com" >Ansel.Shelly@gmail.com</a>
             |
             <a href="https://www.anselshelly.com" target="> anselshelly.com"> AnselShelly.com</a>
             <!--<a href="#" target="_blank">Twitter</a>
