--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	    <!--my css-->
         <link rel="stylesheet" type="text/css" href="css/styles.css">
-
+        <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Project 0</title>
     </head>
     <body>
